--- a/mserve.service
+++ b/mserve.service
@@ -6,7 +6,7 @@ After=network.target
 User=cell
 Group=cell
 WorkingDirectory=/files/video
-ExecStart=/files/video/mserve.py
+ExecStart=/bin/bash --login -c "/files/video/mserve.py"
 Restart=always
 
 [Install]
